Fixed spacing with the new font sizing

--- a/public/index.css
+++ b/public/index.css
@@ -67,7 +67,7 @@ h5,
 h6,
 p {
   color: hsl(var(--grey-50));
-  line-height: 1.35em;
+  line-height: 1.45em;
   margin: 0;
 }
 
